--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div{
+        .mydiv{
             width: 400px;
             height: 610px;
             border: 1px solid black;
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <div>
+    <div class="mydiv">
         First name <input type="text">
         <br><br>
         Lastname : <input type="text">
